# storymapper

./: .gitignore  pyproject.toml  scratch.ipynb
parser/: main.ts
storymapper/: .eslintrc.js  .prettierrc  package.json  pnpm-lock.yaml
storymapper/src/: app.css
storymapper/src/lib/components/: Editor.svelte  Map.svelte
storymapper/src/routes/: +layout.svelte  +page.svelte
